css/main4.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  padding-left: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline; }

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box; }

*, *:before, *:after {
  box-sizing: inherit; }

body {
  font-family: 'PT Serif', serif;
}

/*
layout elements
*/


.tinted-sections {
  background-color: #f5f5f5;
}

.white-sections {
  background-color: rgb(255, 255, 255);
}

.page-footers {
  display: block;
  position: relative;
}

.inner {
  display: flex;
  justify-content: center;
}

.button-container {
  clear: both;
  text-align: center;
  margin:auto;
}

.row:after {
    content: "";
    clear: both;
    display: block;
}

[class*="col-"] {
    float: left;
    padding: 15px;
    /*border: 1px solid red;*/
}

/*
Fonts
*/

.h1-tinted {
  font-family: 'Lora', serif;
  color: #202121;
  font-size: 26px;
}

.h1-form {
  margin-bottom: 8px;
  font-size: 24px;
  color: #212323;
}

.h2-tinted {
  font-family: 'Lora', serif;
  color: #202121;
  font-size: 22px;
}

.p-tinted {
  font-family: 'Lora', serif;
  color: #202121;
  font-size: 18px;
}

.p-regular {
  font-family: 'Lora', serif;
  color: #202121;
}

.p-form {
  line-height: 22px;
  font-size: 14px;
  color: #212323;
}

.icon-description {
  font-family: 'Lora', serif;
  font-size: 20px;
}

.p-footer {
  font-family: 'Lora', serif;
  font-size: 16px;
  color: #fff;
}

.footer h1 {
  font-family: 'Lora', serif;
  font-size: 28px;
  color: #fff;
}

.footer p {
  font-family: 'Lora', serif;
  font-size: 16px;
  color: #BFBFBF;
}

/* Navigation Bar */
.main-wrapper {
  box-sizing: border-box;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: #FFF;
  height: 120px;
}

.logo-container {
  display: block;
  /* display: flex; */
  /* align-content: center; */
}

#mid-nav {
  margin-left: 10px;
  margin-right: 10px;
}

.coastal-logo {
  width: 200px;
}

.nav-item {
  display: inline;
}

.nav-text {
  /* font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif; */
  font-weight: 400;
  color: black;
  text-decoration: none;
}

/*
Hero Section
*/

.hero {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/700952/fresh-cut-grass.jpg");
  background-color: #FFF;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  justify-content: center;

  height: 400px;
}

.layer {
  background-color: rgba(0, 0, 0, 0.20);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.banner {
  display: block;
  margin-left: auto;
  margin-right: auto;

  height: 340px;
  width: auto;
  padding-top: 100px;
}

@media screen and (min-width: 480px) {
    .hero {
      height: 500px;
    }

    .banner {
      height: 420px;
      width: auto;
      padding-top: 120px;
    }
}

/* Introduction */

.intro-container {
  height: 350px;
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.intro-header {
  padding-bottom: 20px;
}

.p-intro {
  font-size: 18px;
}

@media screen and (min-width: 480px) {

  .intro-container {
    height: 300px;
  }

  .intro-header {
    padding-bottom: 20px;
  }

  .p-intro {
    font-size: 1em;
  }

}

@media screen and (min-width: 480px) {
    .into-container {
      height: 200px;
    }

    .p-intro {
      margin-left: auto;
      margin-right: auto;
      max-width: 600px;
    }
}

/* Recent Work */

/* Recent work - mobile */

.tinted {
  background-color: #f5f5f5;
}

.tinted-title {
    padding-top: 20px;
    display: flex;
    justify-content: center;
  }

.recent-work-container {
  height: 800px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.recent-work-container div:nth-child(2) {
  margin-top: 10px;
  margin-bottom: 10px;
}

.recent-work-image {
    height: 250px;
    width: 250px;
    background-repeat: no-repeat;
  }

.recent-work-container .irrigation {
  background-image: url("../assets/irrigation.jpg");
}

.recent-work-container .lighting {
  background-image: url("../assets/lighting.jpg");
}

.recent-work-container .wianno {
  background-image: url("../assets/lowell.jpg");
  background-position: center;
}

.recent-work-caption {
  font-size: 2em;
  color: #fff;
}

.recent-work-image {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Recent work - screens 480-1050 */
@media screen and (min-width: 715px) {
  .recent-work-image {
    height: 250px;
    width: 250px;
  }

  .recent-work-container {
  height: 400px;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  }

  .recent-work-container div:nth-child(2) {
    margin: 0 10px 0 10px;
  }
}

/* Recent work - desktop */
@media screen and (min-width: 1050px) {
  .tinted {
    height: 450px;
  }

  .recent-work-container {
    height: 400px;
    justify-content: center;
    align-items: center;
      flex-direction: row;
  }

  .recent-work-container div:nth-child(2) {
    margin: 0 10px 0 10px;
  }

  .recent-work-image {
    height: 300px;
    width: 300px;
  }

}


/*
Notable Customers
*/

.customer-logo {
  /*display: block;*/
  margin: auto;
  margin-bottom: 40px;
  max-width: 50px;
  max-height: 50px;
  margin-left: 25px;
  margin-right: 25px;
  /*margin-bottom: 50px;*/
}

.customer-header-container {
  padding-top: 20px;
  padding-bottom: 15px;
  display: flex;
  justify-content: center;
}

/*
Contact
*/

.form-container {
  padding: 80px 45px 40px 45px;
}

.text-form {
  text-align: center;
  margin-bottom: 35px;
}

.text-input {
  margin-bottom: 15px;
}

.text-input input {
  /* margin-top: 4px; */

  height: 25px;
  width: 100%;

  border-color: #E2E2E2;
  border-width: 1px;
  border-radius: 3px;
  border-style: solid;
}

.dropdown {
  margin-top: 4px;
  margin-bottom: 15px;

  height: 25px;
  width: 100%;

  background-color: white;

  border-color: #E2E2E2;
  border-width: 1px;
  border-radius: 3px;
  border-style: solid;

  font-family: "lora", serif;
  font-size: 11px;
  color: RGB(33, 35, 35, 50);
}

.comment {
  margin-top: 4px;
  font-family: "lora", serif;
  font-size: 11px;
  color: RGB(33, 35, 35, 50);

  width: 100%;
  height: 100px;

  border-color: #E2E2E2;
  border-width: 1px;
  border-radius: 3px;
  border-style: solid;
}

.button {
  margin-top: 20px;
  display: flex;
  float: right;
  background-color: #007744;
  height: 28px;
  width: 105px;

  border-bottom-style: solid;
  border-width: 3px;
  border-radius: 4px;
  border-color: #0c4e32;
}

.button-content {
  width: 100%;
  justify-content: center;
  align-items: center;

  font-family: "lora", serif;
  color: white;
  background-color: unset;
  border: 0;
}

/*
Map
*/

.map-container {
  display: block;
  padding-top: 20px;
  padding-bottom: 20px;
  margin-bottom: 10px;
}

.map-title {
  text-align: center;
}

/*
why
*/

.why-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 650px;
}

.content-container {
  display: flex;
  flex-direction: column;
}

.tinted-header {
  font-size: 1.5em;
  margin-bottom: 20px;
}

.why-image {
  width: 350px;
  height: auto;
}

.content-container p {
  margin-top: 10px;
  max-width: 350px;
}

@media screen and (min-width: 750px) {
  .why-container {
    padding: 0px;
    height: 450px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .content-container {
    display: flex;
    flex-direction: row;
  }

  .content-container p {
    margin: 0;
  }

  .text-container p:last-child {
    margin-top: 10px;
  }

  .text-container {
    padding-left: 30px;
    display: flex;
    flex-direction: column;
  }

  .why-image {
    height: 275px;
    width: auto;
  }
}

/*
Annual Service Plan
*/

.service-container {
  text-align: center;
  padding-bottom: 30px;
}

.agreement-image {
  height: 100px;
  width: 100px;
}

/* Annual Service Plan */
.annual-service-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 1000px;
}

.info-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 80px;
}

.info-containter p {
  margin-top: 8px;
}

.container {
}

.plan-big-container {
  display: flex;
}

.plan-container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  background: white;
  height: 400px;
  width: 300px;
  box-shadow: 0 0 1px rgba(0,0,0,0.2);
}

.plan-container h2 {
  font-size: 1.5em;
  margin-top: 10px;
  text-align: center;
}

/*
Footer
*/

/* once new footer implemented delete this */
.page-footers {
  background-color: #00284a;
}

.footer {
  height: 200px;
  background-color: #00284a;
}

.footer-content {
  /* padding-left: 38px; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 15px;
  padding-bottom: 15px;
}

.footer-content h1 {
  text-align: center;
  padding-bottom: 15px;
}

.footer-content p {
  text-align: center;
  padding-bottom: 5px;
  text-decoration: none;
}

.footer-content a {
  text-decoration: none;
  color: #BFBFBF;
}

.footer-content a:hover {
  text-decoration: underline;
}

.copyright {
  /* background: yellow; */
  top: 30px;
  text-align: center;
}

/*  */

